fix color contrast

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,8 +22,8 @@ $headings-font-family:        'Cormorant Garamond', serif !default;
 
 // Set the primary and secondary brand colors.
 
-$primary:    #1565c0;
-// $secondary:    #20bf55;
+$primary:   #1565c0;
+
 
 // Create variations because Bootstrap doesn't handle this well yet.
 // $primary-light: ;
@@ -82,8 +82,12 @@ $gray-900: #212529;
 $navbar-light-color:           $gray-700;
 $nav-tabs-link-active-color:        $gray-900;
 
+$secondary:   $gray-700;
+
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
+
+
 
 .nav-link {
   text-transform: uppercase;
